pv-csi-hostpath-sc-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pv-csi-hostpath-sc-test
spec:
  containers:
  - image: alpine
    name: alpine
    command: ["tail", "-f", "/dev/null"]
    volumeMounts:
    - name: claim-volume
      mountPath: /data
  volumes:
  - name: claim-volume
    persistentVolumeClaim:
      claimName: pv-csi-hostpath-sc-claim
  terminationGracePeriodSeconds: 0
